--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -10,24 +10,34 @@ jobs:
     runs-on: ubuntu-latest
     
     steps:
+    # Check out the repository
     - uses: actions/checkout@v2
     
+    # Set up Python environment
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
         python-version: '3.x'
     
+    # Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
+    # Run the scraper script
     - name: Run scraper
       run: python feed.py
     
+    # Commit and push if changes
     - name: Commit and push if changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the built-in GitHub token
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
         git add new_articles.json new_articles.xml last_processed_links.json
-        git diff --quiet && git diff --staged --quiet || (git commit -m "Update news articles [automated]" && git push)
+        if ! git diff --quiet; then
+          git commit -m "Update news articles [automated]"
+          git push
+        fi
