--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -36,7 +36,7 @@ jobs:
       run: |
         git config --local user.email "action@github.com"
         git config --local user.name "GitHub Action"
-        git add new_articles.json new_articles.xml last_processed_links.json
+        git add -f new_articles.json new_articles.xml last_processed_links.json
         if ! git diff --quiet; then
           git commit -m "Update news articles [automated]"
           git push
