--- a/.github/workflows/scraper.yml
+++ b/.github/workflows/scraper.yml
@@ -8,36 +8,41 @@ on:
 jobs:
   scrape:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write  # Add explicit write permission
     
     steps:
-    # Check out the repository
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v3  # Updated to v3
+      with:
+        fetch-depth: 0  # Fetch all history
     
-    # Set up Python environment
     - name: Set up Python
-      uses: actions/setup-python@v2
+      uses: actions/setup-python@v4  # Updated to v4
       with:
         python-version: '3.x'
     
-    # Install dependencies
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
         pip install -r requirements.txt
     
-    # Run the scraper script
     - name: Run scraper
       run: python feed.py
     
-    # Commit and push if changes
-    - name: Commit and push if changes
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}  # Use the built-in GitHub token
+    - name: Commit and push changes
       run: |
-        git config --local user.email "action@github.com"
-        git config --local user.name "GitHub Action"
+        git config --local user.email "github-actions[bot]@users.noreply.github.com"
+        git config --local user.name "github-actions[bot]"
+        
+        # Force add the files even if they're in .gitignore
         git add -f new_articles.json new_articles.xml last_processed_links.json
-        if ! git diff --quiet; then
+        
+        # Check if there are any changes
+        if git diff --staged --quiet; then
+          echo "No changes to commit"
+        else
           git commit -m "Update news articles [automated]"
           git push
         fi
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
