--- a/.github/workflows/scrape_feed.yml
+++ b/.github/workflows/scrape_feed.yml
@@ -3,7 +3,7 @@ name: Fetch and Track Latest Gadwal News Feed
 on:
   schedule:
     # Runs every 6 hours
-    - cron: "*/5 * * * *"
+    - cron: "0 */6 * * *"
   workflow_dispatch: # Allows manual trigger
 
 jobs:
